src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Jim+Nightshade&family=Oswald:wght@200..700&display=swap');
body{
  margin:0;
  min-height:100vh;
  color:white;
  position:relative;
  background-image:
  linear-gradient(
    rgba(0,0,0,0.25),
    rgba(0,0,0,0.35)
  ),
  url("./assets/bg.png");
  background-size:cover;
  background-position:center;
  background-repeat:no-repeat;
  background-attachment:fixed;
  background-blend-mode:darken;
  font-family: 'Oswald',sans-serif;
}

.upper{
  display:flex;
  justify-content: space-between;
  align-items: center;
  background-color: #1517348a;
  padding:12px 40px;
  color:white;
  font-family: 'Oswald',sans-serif;
}
.upper> h4{
  color:rgb(223, 119, 216);
}
.navbar{
  display: flex;
  justify-content: space-evenly;
  gap:30px;
  align-items: center;
  font-size:22px;
}

.navbar> a{
 text-decoration:none;
  color:white;
  transition:0.3s;
}

.title{
  text-align: center;
  color:white;
}

.title > h1{
  font-family: 'Jim Nightshade',sans-serif;
  font-size:4rem;
  font-weight:800;
  letter-spacing:-2px;
  margin-bottom:6px;
  background:
  linear-gradient(
    to right,
    #ffffff,
    #973bf3,
    #4b9cff
  );
  background-clip: none;
-webkit-background-clip:text;
-webkit-text-fill-color:transparent;
  text-shadow: 0 0 25px rgba(253, 247, 247, 0.476);
}

.title > h4{
font-size:1.1rem;
opacity:0.85;
letter-spacing:0.5px;
color:#d1d5db;
margin-top:3px;
 font-family: 'Oswald',sans-serif;
}

p{ 
  font-size: 18px;
  color: white;
  margin-bottom: 0;
}

input:focus{
  border:1px solid #c084fc;
  box-shadow:0 0 18px rgba(168,85,247,0.45);
}

.form-box{
  margin-left:auto;
  margin-right:auto;
  text-align: center;
  width:100%;
  display:flex;
  flex-direction: column;
  gap:15px;
    background:rgba(17,24,39,0.85);
    border:1px solid rgba(168,85,247,0.25);
    box-shadow:    0 0 30px rgba(168,85,247,0.12);
 border-radius: 40px;
 padding:20px 40px;
 color:white;
min-width:350px;
max-width: 500px;
}

.btn2{
  margin-bottom: 10px;
}

button{
cursor:pointer;
}

.inp,.lab{
  font-size: large;
  display: flex;
  justify-content: space-evenly;
  gap:30px;
}

.input-emg{
 display:flex;
 align-items:center;
 gap:12px;
 background:rgba(255,255,255,0.04);
 border:1px solid rgba(255,255,255,0.08);
 padding:10px 14px;
 border-radius:14px;
 box-shadow:inset 0 0 12px rgba(255,255,255,0.03);
  width:100%;
  box-sizing:border-box;
}

.input-emg:hover{
  border:1px solid rgba(168,85,247,0.35);
  box-shadow:0 0 15px rgba(168,85,247,0.15);
}

.input-emg > input,.in1{
  flex:1;
  background:transparent;
  border:none;
  outline:none;
  color:white;
  font-size:16px;
  caret-color:white;
  border-radius: 10px;
  padding:7px;
  width:100%;
}

.input-emg > input::placeholder{
  color:rgba(255,255,255,0.45);
}

button{
  padding: 9px 20px;
  font-size:16px;
  border-radius: 7px;
  border:none;
background:linear-gradient(
     to right,
     #9333ea,
     #ec4899
 );
}
.cards-box{
  width:100%;
    display:grid;
    grid-template-columns:repeat(4,1fr);
    margin-top:30px;
    gap:18px;
      background:
    linear-gradient(
        145deg,
        #0f172a,
        #111827,
        #1e1b4b
    );
  border:1px solid rgba(168,85,247,0.3);
  border-radius:24px;
  padding:8px;
  box-shadow:
  0 0 25px rgba(168,85,247,0.15),
  0 0 50px rgba(59,130,246,0.08);
  backdrop-filter:blur(10px);
}
.card1,.card2,.card3,.card4{
  display: flex;
 text-align:center;
  border-radius:18px;
  padding:5px 8px;
  transition:0.3s ease;
  min-height:110px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.card1{
  font-size: large;
   background:
  linear-gradient(
    145deg,
    rgba(5, 46, 22, 0.266),
    rgba(34, 197, 94, 0.238)
  );
  border:1px solid rgba(74,222,128,0.45);
  box-shadow:
  0 0 8px rgba(34,197,94,0.5),
  0 0 22px rgba(34,197,94,0.25);
  color:#dcfce7;
}
.card2{
    font-size: large;
  background:
  linear-gradient(
    145deg,
    rgba(8, 47, 73, 0.266),
    rgba(59, 130, 246, 0.238)
  );
  border:1px solid rgba(96,165,250,0.45);
  box-shadow:
  0 0 8px rgba(59,130,246,0.5),
  0 0 22px rgba(59,130,246,0.25);
  color:#dbeafe;
}
.card3{
    font-size: large;
  background:
  linear-gradient(
    145deg,
    rgba(59, 7, 100, 0.266),
    rgba(168, 85, 247, 0.238)
  );
  border:1px solid rgba(192,132,252,0.45);
  box-shadow:
  0 0 8px rgba(168,85,247,0.5),
  0 0 22px rgba(168,85,247,0.25);
  color:#f3e8ff;
}
.card4{
    font-size: large;
  background:
  linear-gradient(
    145deg,
    rgba(69, 10, 10, 0.266),
    rgba(239, 68, 68, 0.238)
  );
  border:1px solid rgba(248,113,113,0.45);
  box-shadow:
  0 0 8px rgba(239,68,68,0.5),
  0 0 22px rgba(239,68,68,0.25);
  color:#fee2e2;
}
.rep-head{
  text-align: center;
  color:white;
}

.main-layout{
  display: flex;
  gap:30px;
  align-items: flex-start;
  justify-content: center;
  padding:40px;
  flex-wrap: wrap;
}

.report-box{
  flex:1;
  min-width: 350px;
  max-width: 900px;
  width:100%;
  padding-right: 40px;
}
.chart-box{
display:flex;
justify-content:center;
align-items:center;
 padding:25px;
border-radius:20px;
  background:rgba(17,24,39,0.85);
    border:1px solid rgba(168,85,247,0.25);
    box-shadow:    0 0 30px rgba(168,85,247,0.12);
  backdrop-filter:blur(1px);
  margin-top:20px;
  margin-bottom:20px;
height:350px;
}

.report-con{
  flex:1;
    max-width:850px;
  overflow: hidden; 
  min-height: 750px;
    border-radius:24px;
    padding:30px;
 background:rgba(17,24,39,0.85);
    border:1px solid rgba(168,85,247,0.25);
    box-shadow:    0 0 30px rgba(168,85,247,0.12);
}
.card1:hover,
.card2:hover,
.card3:hover,
.card4:hover{
   transform:translateY(-6px);
   box-shadow:
   0 0 25px rgba(168,85,247,0.35);
}

.runway-box,.burn-box{
   font-size: large;
 margin-top:20px;
 text-align:center;
 padding:20px;
 border-radius:18px;
 background:rgba(17,24,39,0.85);
    border:1px solid rgba(168,85,247,0.25);
    box-shadow:    0 0 30px rgba(168,85,247,0.12);
 color:white;
}

.insight-box{
 width:90%;
 max-width:1200px;
 margin:30px auto;
 padding:25px;
 border-radius:20px;
 background:rgba(64, 3, 74, 0.181);
 border:1px solid rgba(168,85,247,0.2);
 color:white;
 text-align:center;
 box-shadow: 0 0 20px rgba(168,85,247,0.1);
 max-width: 550px;
 width: 100%;
 font-size: large;
}
.left{
  flex:1;
    display:flex;
    flex-direction:column;
    gap:25px;
    max-width: 500px;
}
.right{
    flex:1;
    max-width:900px;
}

.insight-btns{
  text-align: center;
    display:flex;
    justify-content:space-between;
    gap:20px;
    margin-top:15px;
}

.insight-btns > button{
    width:40px;
    height:40px;
    border-radius:50%;
    cursor:pointer;
}

.danger{
  color:#ef4444;
  text-shadow:0 0 10px rgba(239,68,68,0.4);
}
.warning{
  color:#facc15;
  text-shadow: 0 0 10px rgba(250,204,21,0.4);
}

.safe{
  color:#22c55e;
 text-shadow: 0 0 10px rgba(34,197,94,0.4);
}

@media(max-width:768px){
.upper{
flex-direction:column;
gap:1rem;
padding:1rem;
}
.navbar{
flex-wrap:wrap;
justify-content:center;
gap:15px;
font-size:16px;
}
.title h1{
font-size:2.5rem;
padding:0 10px;
line-height:1.1;
}
.title h4{
font-size:1rem;
padding:0 15px;
}
.main-layout{
  flex-direction: column;
padding:20px;
gap:25px;
}
.form-box{
padding:20px;
min-width:auto;
width:100%;
}
.inp,
.lab{
flex-direction:column;
gap:10px;
}
.cards-box{
grid-template-columns:1fr;
}
.report-con{
padding:20px;
min-height:auto;
}
.report-box{
padding-right:0;
}
.chart-box{
overflow-x:auto;
padding:10px;
}
.insight-box{
width:100%;
padding:20px;
}
button{
width:100%;
}
.insight-btns{
justify-content:center;
}
.insight-btns button{
width:45px;
height:45px;
}
}

